# ai-platform-prototype

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: hooks.json
.codex/agents/: architect.toml  docs-engineer.toml  dogfood.toml  incident-investigator.toml  platform-engineer.toml  platform-steward.toml  platform_steward.toml  qa-engineer.toml  quality-verifier.toml  release-manager.toml  reviewer.toml  runtime-engineer.toml
.codex/hooks/: quality_gate.py
.github/workflows/: ci.yml
ai_platform/: __init__.py  api.py  cli.py  controllers.py  events.py  knowledge.py  models.py  observability.py  policy.py  resources.py  runtime.py  storage.py
docs/: README.md
docs/adr/: 0001-declarative-resource-model.md  0002-agentrun-execution-boundary.md  0003-knowledge-index-architecture.md  0004-policy-engine.md  0005-pilot-abstraction.md  0006-tool-invocation-boundary.md  0007-embedded-observations-v1-1.md  0008-decision-protocol-boundary.md  0009-durable-agentrun-execution-loop.md  0010-execution-budget-and-terminal-state-enforcement.md  0011-provider-adapter-boundary.md  README.md  template.md
docs/contributing/: README.md  architecture-review-checklist.md  feature-lifecycle.md
docs/reports/: dogfood-df003-provider-recovery-rerun.md  dogfood-rfc0003.md  dogfood-rfc0005.md
docs/rfc/: 0001-structured-tool-invocation.md  0001-tool-invocation-framework.md  0002-agentrun-execution-engine-loop.md  0002-pilot-execution-loop.md  0003-built-in-tool-runtime.md  0004-structured-model-protocol.md  0005-multi-turn-agent-runtime.md  README.md  template.md
docs/roadmap/: README.md  release-process.md
docs/spec/: 000-introduction.md  001-architecture.md  002-resource-model.md  003-control-plane.md  004-workspaces.md  (+21 more)
tests/: test_api.py  test_cli.py  test_control_plane.py  test_day0_tutorial.py  test_execution_engine.py  test_knowledge.py  test_policy.py  test_resources.py  test_tool_invocations.py
(+31 files in other folders)
