[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-prototype"
version = "0.1.0"
description = "Declarative AI orchestration platform prototype inspired by Kubernetes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ai-platform = "ai_platform.cli:main"
platform = "ai_platform.cli:main"

[tool.setuptools.packages.find]
include = ["ai_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
