[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-prototype"
version = "0.1.0"
description = "Declarative AI orchestration platform prototype inspired by Kubernetes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.16.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
ai-platform = "ai_platform.cli:main"
platform = "ai_platform.cli:main"

[tool.setuptools.packages.find]
include = ["ai_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
packages = ["ai_platform"]
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
